--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,3 +142,22 @@ body::-webkit-scrollbar-thumb {
   /* border: 3px solid orange; */
   /* creates padding around scroll thumb */
 }
+
+.wrapper {
+  max-width: 960px;
+  width: 100%; 
+  margin: 30px auto;
+  /* transform: scale(0.8); */
+}
+.landing-page {
+  max-width: 960px;
+  height: 475px;
+  margin: 0;
+  box-shadow: 0px 0px 8px 1px #ccc;
+  background: #fafafa;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
